# agent-runner

./: .env.example  .gitignore  README.md  bot_config_example.json  pyproject.toml
agent_runner/: agent.py  celery.py  example_config.py  run_web_server.py  runner.py  task_config.py  tasks.py  web_server.py
agent_runner/agents/: adder_agent.py  agents.py
discord_bot/: main.py
example_agents/: adder_agent.py  changelog_agent.py
example_tools/commit_summarizer/: summarize_commits.py
example_tools/github_commits/: github_commits.py  test.py
